--- a/package.json
+++ b/package.json
@@ -1,20 +1,20 @@
 {
-  "name": "cmss.ipietech.net",
-  "version": "1.0.0",
+  "name": "visitor",
+  "version": "1.0.1",
   "description": "A Vue.js project",
   "author": "Kimi <i@mitkimi.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "watch": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
-    "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "@chenfengyuan/vue-qrcode": "^1.0.0",
     "autoprefixer": "^7.1.2",
     "babel-core": "^6.22.1",
     "babel-eslint": "^8.2.1",
@@ -28,6 +28,7 @@
     "chalk": "^2.0.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.28.0",
+    "echarts": "^4.2.0-rc.2",
     "element-ui": "^2.2.1",
     "eslint": "^4.15.0",
     "eslint-config-airbnb-base": "^11.3.0",
@@ -41,6 +42,8 @@
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "moment": "^2.22.2",
     "muse-ui": "^2.1.0",
     "node-notifier": "^5.1.2",
     "nprogress": "^0.2.0",
@@ -55,9 +58,11 @@
     "shelljs": "^0.7.6",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue": "^2.5.17",
+    "vue-clock2": "^1.1.5",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.17",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
